--- a/sales/views/res_partner_views.xml
+++ b/sales/views/res_partner_views.xml
@@ -1,13 +1,15 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
+
+
     <!-- res_partner form view-->
-    <record id="res_partner_view_form" model="ir.ui.view">
-        <field name="name">res.partner.view.form.inherit</field>
+    <record id="view_partner_property_form" model="ir.ui.view">
+        <field name="name">view.partner.property.form.inherit</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="product.view_partner_property_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='property_product_pricelist']" position="after">
-            <field name="days_to_deliver" string="Date of deliver"/>
+                <field name="days_to_deliver" string="Date of deliver"/>
             </xpath>
         </field>
     </record>
