--- a/sale_order_approval/views/inventory_add_appointment_date_views.xml
+++ b/sale_order_approval/views/inventory_add_appointment_date_views.xml
@@ -3,8 +3,8 @@
 
 	
     <!-- Inventory form view for add  appointment date in inventory-->
-    <record id ="inventory_view_form" model="ir.ui.view">
-        <field name="name">inventory_view_form.inharit</field>
+    <record id ="view_picking_form" model="ir.ui.view">
+        <field name="name">view.pick.ingform.inharit</field>
         <field name="model">stock.picking</field>
         <field name= "inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
