--- a/sale_order_approval/views/sale_approval_views.xml
+++ b/sale_order_approval/views/sale_approval_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- sale order form inherit for blockage-->
-    <record id ="sale_order_view_form_inherit" model="ir.ui.view">
-        <field name="name">sale_order_inhert</field>
+    <record id ="view_order_form" model="ir.ui.view">
+        <field name="name">view.order.form.inherit</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <!-- <field name="groups_ids" eval="[4,ref((sales_team.group_sale_manager))]"/> -->
@@ -14,10 +14,10 @@
     </record>
 
 
-    <record id="blockage_group_user_1" model="ir.ui.view">
+    <record id="sale_order_view_form_inherit" model="ir.ui.view">
         <field name="name">bloackage.user</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale_order_view_form_inherit"/>
+        <field name="inherit_id" ref="view_order_form"/>
         <field name="groups_id" eval="[(4,ref('sales_team.group_sale_manager'))]"/>
         <field name="arch" type="xml">
             <field name='Zero_stock_approval' position="attributes">
