--- a/sales/views/inventory_date_views.xml
+++ b/sales/views/inventory_date_views.xml
@@ -4,13 +4,12 @@
 	
     <!-- Inventory form view for add  appointment date in inventory-->
     <record id ="view_picking_form" model="ir.ui.view">
-        <field name="name">view_picking_form.inharit</field>
-        <field name="model">stock..picking</field>
+        <field name="name">view.picking.form.inharit</field>
+        <field name="model">stock.picking</field>
         <field name= "inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='origin']" position="after">
                 <field name="appointment_Date" string="Appointment Date" attrs="{'invisible':[('picking_type_code','!=','outgoing')]}"/>
-                <!--    <field name="scheduled_date" string="scheduled_date" /> -->
             </xpath>
         </field>
     </record>         
